# Monografico_Tarea2

./: .env.example  README.md  justfile
app/: settings.py  urls.py
applications/account/: views.py
applications/account/templates/: signup.html
applications/core/templates/: home.html
documentation/: DOCUMENTATION.md
documentation/deployment/: vercel.md
source/django/core/: .env.example  justfile  requirements.txt
source/django/core/app/: settings.py  urls.py
source/django/core/applications/account/: apps.py
source/django/core/applications/account/handlers/: signin.py
source/django/core/applications/account/templates/: signin.html  signup.html
source/django/core/applications/core/: views.py
source/django/core/applications/core/templates/: home.html
source/django/core/applications/employeemanager/: tests.py  urls.py  views.py
source/django/core/components/core/button/: __init__.py  (+1 more)
source/django/core/main/app/: settings.py  urls.py
source/django/core/server/: apps.py  views.py
source/django/core/templates/: base.html
source/django/core/templates/admin/: base_site.html  index.html
source/django/core/templates/core_button/: pyproject.toml
source/django/core/templates/core_button/core_button/: apps.py
source/django/core/templates/core_button/core_button/static/core/styles/: button.css
source/django/core/templates/core_button/core_button/templates/core/: button.html
source/django/core/templates/pages/: app.html
source/django/core/utils/validators/: PasswordValidator.py
templates/: base.html
templates/pages/: app.html  home.html
(+20 files in other folders)
