[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "core_button"
version = "0.1.0"
description = "Reusable Django core button component"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Henry Edilio Ramirez Chevalier", email = "henryedilio@gmail.com" }
]

dependencies = [
  "django>=4.0"
]

keywords = ["django", "components", "ui", "button", "templates"]

classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://github.com/avantkeel/monograficodemo"

[tool.setuptools.packages.find]
where = ["."]